# terragl

./: CMakeLists.txt  Makefile  README.md  TODO.md
slides/: xsleza26.pptx
src/: main.cpp  scene.hpp
src/gl/: buffer.hpp  camera.cpp  camera.hpp  helper.hpp  program.hpp  shader.hpp  texture.hpp  vertex_array.hpp  window.cpp  window.hpp
src/gui/: button.cpp  button.hpp  widget.hpp
src/gui/quad/: quad.cpp  quad.hpp  shader.frag  shader.vert
src/gui/text/: font.cpp  font.hpp  shader.frag  shader.vert  system.cpp  system.hpp  text.cpp  text.hpp  text_renderer.cpp  text_renderer.hpp
src/height_map/: height_map.cpp  height_map.hpp  map.cpp  map.hpp  noise.cpp  noise.hpp  perlin.cpp  perlin.hpp  perlin2.hpp  simplex.cpp  simplex.hpp
src/scene/: scene.cpp  scene.hpp
src/scene/state/: game.cpp  game.hpp  menu.cpp  menu.hpp  settings.cpp  settings.hpp  state.hpp
src/sky/: shader.frag  shader.vert  sky.cpp  sky.hpp
src/state/: game.cpp  game.hpp  menu.cpp  menu.hpp  state.hpp
src/terrain/: material.cpp  material.hpp  shader.frag  shader.tesc  shader.tese  shader.vert  terrain.cpp  terrain.hpp
src/text/: font.cpp  font.hpp  text.cpp  text.hpp  text_renderer.cpp  text_renderer.hpp
src/water/: shader.frag  shader.tese  water.cpp  water.hpp
